Criação das paginas de login e recuperação se senha, inclusão de permissões aos usuários e inclusão da pagina de livros emprestados.

--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -15,4 +15,7 @@
     <li><strong>Genre:</strong> {{ num_genres }}</li>
     <li><strong>Copias contendo "História":</strong> {{ num_books_historia }}</li>
   </ul>
+
+  <p>You have visited this page {{ num_visits }}{% if num_visits == 1 %} time{% else %} times{% endif %}.</p>
+
 {% endblock %}
