--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -17,15 +17,25 @@
         <ul class="sidebar-nav">
           <li><a href="{% url 'index' %}">Home</a></li>
           <li><a href="{% url 'books' %}">All books</a></li>
-          <li><a href="{% url 'authors' %}">All authors</a></li>
+          <li><a href="{% url 'authors' %}">All authors</a></li> <br/>
 
           {% if user.is_authenticated %}
             <li>User: {{ user.get_username }}</li>
             <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
             <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
           {% else %}
-            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li> <br/>
           {% endif %}
+
+          {% if perms.catalog.can_mark_returned %}
+            <hr>
+            <li>Staff</li>
+            <li><a href="{% url 'all-borrowed' %}">All Borrowed</a></li>
+            {% if user.is_staff %}
+              <li><a href="{% url 'admin:index' %}">Administration</a></li>
+            {% endif %}
+          {% endif %}
+
         </ul>
       {% endblock %}
       </div>
